--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
         <title>
             الصفحة الاولى
         </title>
-<link rel="icon" href="./camera-2186901_1280.png"
+  <link rel="icon" href="./camera-2186901_1280.png"    
+    <head>
         
-    </head>
     <h1>مشعل عادل</h1>
     <h2>هذا موقعي الاول</h2>
-    <p>يشتغل على جميع الاجهزة ايمنا كانت</p>    
+    <p>يشتغل على جميع الاجهزة ايمنا كانت</p>  
+    <a href="./index2.html">الصفحة الثانية</a> 
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/IhM2U8UbY54" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <body>
-    <a href="./index.html">رابط الصفحة الثانية</a>
-    </body>
 </html>
