--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
         <title>
             الصفحة الاولى
         </title>
-  <link rel="icon" href="./camera-2186901_1280.png"    
-    <head>
+  <link rel="icon" href="./camera-2186901_1280.png">   
+    </head>
         
     <h1>مشعل عادل</h1>
     <h2>هذا موقعي الاول</h2>
